# sources/spring-server/src/main/java/ch/heigvd/gamification/utils/ModelClassConverter.java
@@ -7,7 +7,6 @@ import ch.heigvd.gamification.api.dto.NewBadge;
 import ch.heigvd.gamification.api.dto.NewGameEvent;
 import ch.heigvd.gamification.api.dto.NewGamifiedApplication;
 import ch.heigvd.gamification.api.dto.NewPointScale;
-import ch.heigvd.gamification.api.dto.NewRule;
 import ch.heigvd.gamification.api.dto.PointScaleToClient;
 import ch.heigvd.gamification.api.dto.RuleToClient;
 import ch.heigvd.gamification.model.ApplicationUser;
@@ -18,6 +17,7 @@ import ch.heigvd.gamification.model.PointScale;
 import ch.heigvd.gamification.model.Rule;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import org.springframework.util.DigestUtils;
 
@@ -59,8 +59,12 @@ public class ModelClassConverter {
                         .description(r.getDescription())
                         .eventType(r.getEventType())
                         .pointScaleName(r.getPointScaleToCheck().getName())
-                        .valueToReach(r.getValueToReach())
-                        .badgeName(r.getBadgeToAward().getName());
+                        .pointsToAdd(r.getPointsToAdd())
+                        .valueToReach(r.getValueToReach());
+                
+                if(r.getBadgeToAward() != null){
+                    tmp.setBadgeName(r.getBadgeToAward().getName());
+                }
 
                 rulesToClient.add(tmp);
             }
@@ -90,6 +94,33 @@ public class ModelClassConverter {
 
                 badgesToClient.add(tmp);
             }
+        }
+
+        return badgesToClient;
+
+    }
+    
+    /**
+     *
+     * @param badges
+     * @return
+     */
+    public static List<BadgeToClient> badgeMapToBadgeToClientList(Map<String,Badge> badges) {
+
+        List<BadgeToClient> badgesToClient = new LinkedList<>();
+
+        if (badges != null) {
+
+            badges.forEach((k,b) -> {
+
+                BadgeToClient tmp = new BadgeToClient().id(b.getId())
+                        .name(b.getName())
+                        .description(b.getDescription())
+                        .imageURI(b.getImageURI());
+
+                badgesToClient.add(tmp);
+                
+            });
         }
 
         return badgesToClient;
@@ -136,9 +167,7 @@ public class ModelClassConverter {
         GameEvent newG = new GameEvent();
 
         newG.setAppUserId(newGameEvent.getAppUserId());
-        newG.setPointScaleToUpdate(newGameEvent.getPointScaleToUpdateName());
         newG.setEventType(newGameEvent.getEventType());
-        newG.setNewPoints(newGameEvent.getNewPoints());
 
         return newG;
     }
@@ -185,6 +214,37 @@ public class ModelClassConverter {
 
                 pointScalesToClient.add(tmp);
             }
+        }
+
+        return pointScalesToClient;
+
+    }
+    
+    /**
+     *
+     * @param pointScales
+     * @return
+     */
+    public static List<PointScaleToClient> pointScaleMapToPointScaleToClientList(Map<String,PointScale> pointScales) {
+
+        List<PointScaleToClient> pointScalesToClient = new LinkedList<>();
+
+        if (pointScales != null) {
+
+            pointScales.forEach((k,p) -> {
+                
+                        PointScaleToClient tmp = new PointScaleToClient().id(p.getId())
+                        .name(p.getName())
+                        .description(p.getDescription())
+                        .isIntegerScale(p.getIsIntegerScale())
+                        .currentValue(p.getCurrentValue())
+                        .lowerBound(p.getLowerBound())
+                        .upperBound(p.getUpperBound())
+                        .unit(p.getUnit());
+
+                        pointScalesToClient.add(tmp);
+            });
+            
         }
 
         return pointScalesToClient;
@@ -239,8 +299,8 @@ public class ModelClassConverter {
         ApplicationUserToClient appUserToClient = new ApplicationUserToClient();
 
         appUserToClient.setApplicationName(appUser.getApplication().getName());
-        appUserToClient.setAwardedBadges(badgeListToBadgeToClientList(appUser.getAwardedBadges()));
-        appUserToClient.setCurrentPoints(pointScaleListToPointScaleToClientList(appUser.getCurrentPoints()));
+        appUserToClient.setAwardedBadges(badgeMapToBadgeToClientList(appUser.getAwardedBadges()));
+        appUserToClient.setCurrentPoints(pointScaleMapToPointScaleToClientList(appUser.getCurrentPoints()));
         appUserToClient.setId(appUser.getId());
         appUserToClient.setIdInApplication(appUser.getIdInGamifiedApplication());
         appUserToClient.setNbEvents(appUser.getNbEvents());
@@ -248,23 +308,33 @@ public class ModelClassConverter {
         return appUserToClient;
 
     }
+    
+    public static List<ApplicationUserToClient> applicationUserListToApplicationUserToClientList(List<ApplicationUser> users){
+        
+        List<ApplicationUserToClient> usersToClient = new LinkedList<>();
+        
+        if(users != null){
+            
+            for(ApplicationUser appUser : users){
+                
+                 ApplicationUserToClient appUserToClient = new ApplicationUserToClient();
 
-    /**
-     *
-     * @param newRule
-     * @return
-     */
-    public static Rule newRuleToRule(NewRule newRule) {
-
-        Rule rule = new Rule();
-
-        rule.setName(newRule.getName());
-        rule.setDescription(newRule.getDescription());
-        rule.setEventType(newRule.getEventType());
-        rule.setValueToReach(newRule.getValueToReach());
-
-        return rule;
-
+                appUserToClient.setApplicationName(appUser.getApplication().getName());
+                appUserToClient.setAwardedBadges(badgeMapToBadgeToClientList(appUser.getAwardedBadges()));
+                appUserToClient.setCurrentPoints(pointScaleMapToPointScaleToClientList(appUser.getCurrentPoints()));
+                appUserToClient.setId(appUser.getId());
+                appUserToClient.setIdInApplication(appUser.getIdInGamifiedApplication());
+                appUserToClient.setNbEvents(appUser.getNbEvents());
+                
+                usersToClient.add(appUserToClient);
+                
+            }
+            
+        }
+        
+        return usersToClient;
     }
+
+    
 
 }
