# sources/spring-server/src/main/resources/api-spec.yaml
@@ -268,6 +268,34 @@ paths:
         '404':
            description:
               User not found
+              
+  /leaderboard/{pointScaleName}:
+    get:
+      description:  Retrieve users ranking for a given pointScale and a given application
+      produces:
+        - application/json
+      parameters:
+        - name: authToken
+          in: header
+          description: The token authenticating the ranked application 
+          required: true
+          type: string
+        - name: pointScaleName
+          in: path
+          description: pointScale on which users are ranked
+          required: true
+          type: string
+      responses:
+        '200':
+          description:
+              Returns the users ordered by their current value on the specified pointScale
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/applicationUserToClient'
+        '404':
+           description:
+              No users found
            
   /auth:
     post:
@@ -445,18 +473,11 @@ definitions:
     required:
       - appUserId
       - eventType
-      - pointScaleToUpdateName
-      - newPoints
     properties:
       appUserId:
         type: string
       eventType:
         type: string
-      pointScaleToUpdateName:
-        type: string
-      newPoints:
-        type: number
-        format: double
         
   appCredentials:
     type: object
@@ -506,6 +527,7 @@ definitions:
       - description
       - eventType
       - pointScaleName
+      - pointsToAdd
       - badgeName
       - valueToReach
     properties:
@@ -517,6 +539,9 @@ definitions:
         type: string
       pointScaleName:
         type: string
+      pointsToAdd:
+        type: number
+        format: double
       badgeName:
         type: string
       valueToReach:
@@ -530,6 +555,7 @@ definitions:
       - description
       - eventType
       - pointScaleName
+      - pointsToAdd
       - badgeName
       - valueToReach
     properties:
@@ -541,6 +567,9 @@ definitions:
         type: string
       pointScaleName:
         type: string
+      pointsToAdd:
+        type: number
+        format: double
       badgeName:
         type: string
       valueToReach:
